# Licence_3_Informatique

./: .gitignore
BD/: .swp  TP1.sql  readme.txt
COMPILATION/PETITEAU_LACHTER/: .directory  .gitignore  CMakeLists.txt  Makefile  README.md  affiche_arbre_abstrait.c  analyseur_lexical.c  analyseur_lexical.h  analyseur_syntaxique.c  analyseur_syntaxique.h  analyseur_syntaxique_l.c  dico.c  dico.h  parcours_mips.c  parcours_mips.h  premiers.h  syntabs.c  syntabs.h  test_yylex  test_yylex.c  util.c
COMPILATION/PETITEAU_LACHTER/BACKUP/: README.md  analyseur_lexical.c  analyseur_syntaxique.c  analyseur_syntaxique_l.h
COMPILATION/PETITEAU_LACHTER/BACKUP/OKLM/: Makefile  analyseur_lexical.c  analyseur_lexical.h  premiers.c  test_yylex.c  util.c  util.h
COMPILATION/PETITEAU_LACHTER/BACKUP/OKLM/test/ressources/AnalyseLexicale/: tri.lex
COMPILATION/PETITEAU_LACHTER/BACKUP/Tests_lexical/Resultat analyse/: affect-err.lex
COMPILATION/PETITEAU_LACHTER/FUSION/: Makefile  README.md  analyseur_syntaxique.c  analyseur_syntaxique.h  symboles.h  test_yylex  test_yylex.c  util.h
COMPILATION/PETITEAU_LACHTER/FUSION/Tests/: boucle_error.l
COMPILATION/PETITEAU_LACHTER/FUSION/Tests_syntaxe/: Operation.l
COMPILATION/PETITEAU_LACHTER/OKLM/: analyseur_lexical.c  analyseur_lexical.h  suivants.c  symboles.h  test_yylex
COMPILATION/PETITEAU_LACHTER/OKLM/test/: testProcess.sh
COMPILATION/PETITEAU_LACHTER/Tests/: essai1.l  essai2.l  essai3.l  essai4.l  mips.l
COMPILATION/PETITEAU_LACHTER/Tests_lexical/: expression.l
COMPILATION/PETITEAU_LACHTER/Tests_syntaxe/: Operation.l
(+414 files in other folders)
